# RTOS

./: .cproject  .gitignore  .mxproject  CMakeLists.txt  LICENSE  Makefile  RTOS Debug.launch  RTOS.ioc  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld  STM32F407XX_FLASH.ld  stm32f407.resc
.github/workflows/: ci.yml
Core/Inc/: scheduler.h  scheduler_internal.h  semaphore.h  stm32f4xx_it.h  task.h  task_internal.h
Core/Src/: handlers.c  main.c  scheduler.c  semaphore.c  stm32f4xx_it.c  task.c
Debug/: RTOS.list  makefile
Debug/Core/Src/: main.cyclo
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.cyclo  stm32f4xx_hal_cortex.cyclo  stm32f4xx_hal_flash.cyclo  stm32f4xx_hal_flash_ex.cyclo  stm32f4xx_hal_pwr.cyclo  stm32f4xx_hal_rcc.cyclo  stm32f4xx_hal_rcc_ex.cyclo
