cmake_minimum_required(VERSION 4.0)
project(RTOS C)

set(CMAKE_C_STANDARD 11)

include_directories(Core/Inc)
include_directories(Drivers/CMSIS)
include_directories(Drivers/CMSIS/Device)
include_directories(Drivers/CMSIS/Device/ST)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx/Include)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
include_directories(SEGGER_RTT_PRINTF)

add_executable(RTOS
        Core/Inc/main.h
        Core/Inc/stm32f4xx_hal_conf.h
        Core/Inc/stm32f4xx_it.h
        Core/Src/handlers.c
        Core/Src/main.c
        Core/Src/stm32f4xx_hal_msp.c
        Core/Src/stm32f4xx_it.c
        Core/Src/syscalls.c
        Core/Src/sysmem.c
        Core/Src/system_stm32f4xx.c
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f407xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
        Drivers/CMSIS/Include/cachel1_armv7.h
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armclang.h
        Drivers/CMSIS/Include/cmsis_armclang_ltm.h
        Drivers/CMSIS/Include/cmsis_compiler.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/cmsis_iccarm.h
        Drivers/CMSIS/Include/cmsis_version.h
        Drivers/CMSIS/Include/core_armv81mml.h
        Drivers/CMSIS/Include/core_armv8mbl.h
        Drivers/CMSIS/Include/core_armv8mml.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm1.h
        Drivers/CMSIS/Include/core_cm23.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm33.h
        Drivers/CMSIS/Include/core_cm35p.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm55.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_cm85.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/CMSIS/Include/core_starmc1.h
        Drivers/CMSIS/Include/mpu_armv7.h
        Drivers/CMSIS/Include/mpu_armv8.h
        Drivers/CMSIS/Include/pac_armv81.h
        Drivers/CMSIS/Include/pmu_armv8.h
        Drivers/CMSIS/Include/tz_context.h
        Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_exti.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_bus.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_cortex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_dma.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_exti.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_gpio.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_pwr.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_rcc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_system.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usart.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_utils.h
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
        SEGGER_RTT_PRINTF/SEGGER_RTT.c
        SEGGER_RTT_PRINTF/SEGGER_RTT.h
        SEGGER_RTT_PRINTF/SEGGER_RTT_Conf.h
        SEGGER_RTT_PRINTF/SEGGER_RTT_printf.c
        Core/Inc/task.h
        Core/Inc/scheduler.h
        Core/Src/task.c
        Core/Src/scheduler.c)
